<?xml version="1.0"?>
<package>
  <name>transform_point_cloud</name>
  <version>0.0.0</version>
  <description>Transform a PointCloud2 with tf2</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_py</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
